@@ -1,3 +1,7 @@
+2007-02-12  Akim Demaille  <akim@lrde.epita.fr>
+
+	* svn-externals.mk (<external>-upci): New.
+
 2007-02-10  Akim Demaille  <akim.demaille@free.fr>
 
 	* svn-externals (svn_externals_update_stream): Take the host
